--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Nikhil_ST10040092_CLDV6212_Part3.Areas.Identity.Pages.Account.UserViewModel>
-
+<link rel="stylesheet" href="~/css/Account.css" asp-append-version="true" />
 @{
     ViewData["Title"] = "Registered Accounts";
 }
