--- a/Views/AppRoles/Index.cshtml
+++ b/Views/AppRoles/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿﻿@using Microsoft.AspNetCore.Identity
 @model IEnumerable<IdentityRole>
+<link rel="stylesheet" href="~/css/Index_AppRoles.css" asp-append-version="true" />
 
 @{
 	ViewData["Title"] = "Application Roles";
@@ -33,3 +34,4 @@
 		}
 	</tbody>
 </table>
+
