--- a/Views/File/Upload.cshtml
+++ b/Views/File/Upload.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Nikhil_ST10040092_CLDV6212_Part3.Models.FileModel
+<link rel="stylesheet" href="~/css/File_upload - Copy.css" asp-append-version="true" />
 
 @{
     ViewData["Title"] = "Upload File";
@@ -17,7 +18,7 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to File List</a>
+    <a asp-action="Index">Return to File List</a>
 </div>
 
 @section Scripts {
