--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     <main class="grid-container">
 
         <article class="featured">
-            <img src="~/Pic/graphic trees.jpeg" alt="Our Team Image" class="section-image">
+            <img src="~/Pic/Eco-Friendly Yoga Leggings.jpg" alt="Our Team Image" class="section-image">
             <div>
                 <h2>
                     Graphic Tees
@@ -36,7 +36,7 @@
         </article>
 
         <article>
-            <img src="~/Pic/Sustainable Activewear.jpeg" alt="Our Story Image" class="section-image">
+            <img src="~/images/1ca36423-9882-4f26-a58f-0b45a313b2a4_Wool Blazer.jpg" alt="Our Story Image" class="section-image">
             <div>
                 <h3>Sustainable Activewear</h3>
                 <p> High-performance activewear made from eco-friendly materials, including leggings, sports bras, and workout tops designed for both style and function.</p>
@@ -45,7 +45,7 @@
         </article>
 
         <article>
-            <img src="~/Pic/Tailored Blazers.jpeg" alt="Our Mission Image" class="section-image">
+            <img src="~/Pic/Vintage Logo Tee.jpg" alt="Our Mission Image" class="section-image">
             <div>
                 <h3>Tailored Blazers</h3>
                 <p>Stylish blazers that offer a sophisticated look for both professional and semi-formal occasions, available in various colors and fits.</p>
@@ -54,7 +54,7 @@
         </article>
 
         <article>
-            <img src="~/Pic/Chic Statement Dresses.jpeg" alt="Our Values Image" class="section-image">
+            <img src="~/Pic/this dress.jpg" alt="Our Values Image" class="section-image">
             <div>
                 <h3>Chic Statement Dresses</h3>
                 <p>Eye-catching dresses designed for special events or nights out, featuring modern cuts, vibrant colors, and unique patterns.</p>
@@ -73,7 +73,7 @@
 
 
         <article>
-            <img src="~/Pic/Versatile Sneakers.jpeg" alt="Our Values Image" class="section-image">
+            <img src="~/Pic/Versatile_Sneaker.jpg" alt="Our Values Image" class="section-image">
             <div>
                 <h3>Versatile Sneaker</h3>
                 <p>
