--- a/Views/Order/Create.cshtml
+++ b/Views/Order/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Nikhil_ST10040092_CLDV6212_Part3.Models.Order
-
+<link rel="stylesheet" href="~/css/Order_Create.css" asp-append-version="true" />
 <form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="CustomerName" class="control-label"></label>
