--- a/Views/Order/Details.cshtml
+++ b/Views/Order/Details.cshtml
@@ -1,8 +1,9 @@
 ﻿@model Nikhil_ST10040092_CLDV6212_Part3.Models.Order
+<link rel="stylesheet" href="~/css/Order_Details.css" asp-append-version="true" />
 
-<h2>Order Details</h2>
+<h2> The Order Details</h2>
 
-<div>
+<div class="order-details">
     <h4>Order ID: @Model.OrderId</h4>
     <dl class="row">
         <dt class="col-sm-2">Customer Name</dt>
