--- a/Views/Order/Edit.cshtml
+++ b/Views/Order/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Nikhil_ST10040092_CLDV6212_Part3.Models.Order
+<link rel="stylesheet" href="~/css/Order_Edit.css" asp-append-version="true" />
 
-<h2>Edit Order</h2>
+<h2>To Edit Order</h2>
 
 <form asp-action="Edit">
     <input type="hidden" asp-for="OrderId" />
