--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Nikhil_ST10040092_CLDV6212_Part3.Models.Order>
+<link rel="stylesheet" href="~/css/Create_New_Order.css" asp-append-version="true" />
 
-<h2>Orders</h2>
+<h2> Our Orders</h2>
 
 <table class="table table-bordered">
     <thead>
