--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Nikhil_ST10040092_CLDV6212_Part3.Models.Product
+<link rel="stylesheet" href="~/css/Product_Edit.css" asp-append-version="true" />
 
-<h2>Edit Product</h2>
+<h2>Edit the Product</h2>
 
 <form asp-action="Edit" method="post" enctype="multipart/form-data">
     <input type="hidden" asp-for="Product_Id" />
