--- a/Views/AppRoles/Create.cshtml
+++ b/Views/AppRoles/Create.cshtml
@@ -1,10 +1,12 @@
 ﻿﻿@using Microsoft.AspNetCore.Identity
+<link rel="stylesheet" href="~/css/AppRoles_Create.css" asp-append-version="true" />
+
 @model IdentityRole
 
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <h2>Create Role</h2>
+            <h2>CREATE ROLE</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -16,3 +18,4 @@
         </form>
     </div>
 </div>
+
