--- a/Views/File/Index.cshtml
+++ b/Views/File/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Nikhil_ST10040092_CLDV6212_Part3.Models.FileModel>
+<link rel="stylesheet" href="~/css/File_Index.css" asp-append-version="true" />
 
 @{
     ViewData["Title"] = "File List";
@@ -23,7 +24,7 @@
                 <td>@file.DisplaySize</td>
                 <td>@file.LastModified?.ToString("g")</td>
                 <td>
-                    <a href="@Url.Content("~/uploads/" + file.Name)" download="@file.Name" class="btn btn-primary">Download</a>
+                    <a href="@Url.Content("~/uploads/" + file.Name)" download="@file.Name" class="btn btn-primary">Download File
                 </td>
             </tr>
         }
