--- a/wwwroot/css/Home.css
+++ b/wwwroot/css/Home.css
@@ -3,7 +3,7 @@ body {
     background: #f9f9f9;
     background-size: cover;
     color: #333;
-    font-family: 'Arial', sans-serif;
+
     line-height: 1.6;
     text-align: center;
     margin: 0;
@@ -27,7 +27,7 @@ body {
     max-width: 1000px;
     margin: auto;
     padding: 20px;
-    background: rgba(0, 0, 0, 0.3); /* Lightens the background slightly */
+    background: linear-gradient(to right, black, #3b3b3b, #0073e6, #ff6b6b, #ffde59);
     border-radius: 10px;
 }
 
@@ -45,7 +45,7 @@ body {
 .btn {
     display: inline-block;
     text-decoration: none;
-    padding: 15px 30px;
+
     border-radius: 30px;
     font-size: 1.2em;
     transition: all 0.3s ease;
@@ -149,12 +149,3 @@ p {
         color: #555;
     }
 
-/* Footer Section */
-.footer {
-    color: #f9f9f9;
-    text-align: center;
-    padding: 20px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
